@@ -604,7 +604,7 @@ content.blocking.enabled:
   default: true
   supports_pattern: true
   type: Bool
-  desc: Enable the ad blocker
+  desc: Enable the ad/host blocker
 
 content.blocking.hosts.lists:
   default:
@@ -614,7 +614,9 @@ content.blocking.hosts.lists:
     valtype: Url
     none_ok: true
   desc: |
-    List of URLs of lists which contain hosts to block.
+    List of URLs to host blocklists for the hock blocker.
+
+    Only used when the simple host-blocker is used (see `content.blocking.method`).
 
     The file can be in one of the following formats:
 
@@ -641,9 +643,9 @@ content.blocking.method:
   desc: |
     Which method of blocking ads should be used.
 
-    Support for Adblock Plus syntax blocklists requires the `adblock` Python
-    package to be installed, which is an optional dependency of qutebrowser.
-    It is required when either `adblock` or `both` are selected.
+    Support for Adblock Plus (ABP) syntax blocklists using Brave's Rust library requires
+    the `adblock` Python package to be installed, which is an optional dependency of
+    qutebrowser. It is required when either `adblock` or `both` are selected.
 
 content.blocking.adblock.lists:
   default:
@@ -656,6 +658,8 @@ content.blocking.adblock.lists:
   desc: |
     List of URLs to ABP-style adblocking rulesets.
 
+    Only used when Brave's ABP-style adblocker is used (see `content.blocking.method`).
+
 content.blocking.whitelist:
   default: []
   type:
@@ -663,7 +667,9 @@ content.blocking.whitelist:
     valtype: UrlPattern
     none_ok: true
   desc: >-
-    A list of patterns that should always be loaded, despite being ad-blocked.
+    A list of patterns that should always be loaded, despite being blocked by the
+    ad-/host-blocker.
+
     Local domains are always exempt from adblocking.
 
     Note this whitelists otherwise blocked requests, not first-party URLs. As
