@@ -35,6 +35,8 @@ Major changes
   at the time of writing, it's recommended to
   https://github.com/qutebrowser/qutebrowser/blob/master/doc/install.asciidoc#installing-qutebrowser-with-virtualenv[install qutebrowser in a virtualenv]
   with a newer version of Qt/PyQt.
+- New optional dependency on the Python `adblock` library, which is now used to
+  integrate Brave's Rust adblocker library, if the `adblock` module is available.
 - Windows 7 is not supported anymore by the Windows binaries.
 - The (formerly optional) `cssutils` dependency is now removed. It was only
   needed for improved behavior in corner cases when using `:download --mhtml`
@@ -66,6 +68,9 @@ Removed
 Added
 ~~~~~
 
+- New settings for the ABP-based adblocker:
+   * `content.blocking.method` to decide which blocker(s) should be used.
+   * `content.blocking.adblock.lists` to configure ABP-like lists to use.
 - When QtWebEngine has been updated but PyQtWebEngine hasn't yet, the dark mode
   settings might stop working. As a (currently undocumented) escape hatch, this
   version adds a `QUTE_DARKMODE_VARIANT=qt_515_2` environment variable which can
@@ -112,6 +117,11 @@ Changed
   was expanded to explain how to use it properly.
 - If `tabs.tabs_are_windows` is set, the `tabs.last_close` setting is now
   ignored and the window is always closed when using `:close` (`d`).
+- Various host-blocking settings have been renamed to accomodate the new ABP-like
+  adblocker:
+    * `content.host_blocking.enabled` -> `content.blocking.enabled` (controlling both blockers)
+    * `content.host_blocking.whitelist` -> `content.blocking.whitelist` (controlling both blockers)
+    * `content.host_blocking.lists` -> `content.blocking.hosts.lists`
 
 Fixed
 ~~~~~
